feat: Handle controller of estate and user

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,12 @@ EMAIL_USERNAME=5d9a096f89391f
 EMAIL_PASSWORD=ad2504051dca7c
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
+
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
+
+HERE_GEOCODING_API_KEY =
+HERE_GEOCODING_APP_ID =
+
+api_get_all_maps_vietnam =
