--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.1",
         "nodemon": "^2.0.20",
+        "pandas": "^0.0.3",
+        "python-shell": "^5.0.0",
         "sharp": "^0.31.3",
         "slugify": "^1.6.5",
         "socket.io": "^4.6.1",
