--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
+        "child_process": "^1.0.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cloudinary": "^1.34.0",
@@ -48,6 +49,7 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.1",
         "nodemon": "^2.0.20",
+        "os": "^0.1.2",
         "pandas": "^0.0.3",
         "python-shell": "^5.0.0",
         "sharp": "^0.31.3",
