--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ HERE_GEOCODING_API_KEY =
 HERE_GEOCODING_APP_ID =
 
 api_get_all_maps_vietnam =
+// "seed": "node src/seed/index.js",
+// "mock": "node src/mocks/index.js",
+// "dev:test": "npm run seed && npm run mock && npm run dev",
