--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "class-validator": "^0.14.0",
         "cloudinary": "^1.34.0",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "datauri": "^4.1.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -40,6 +41,7 @@
         "http-status": "^1.6.2",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "mongoose": "^6.9.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
@@ -49,6 +51,8 @@
         "os": "^0.1.2",
         "pandas": "^0.0.3",
         "python-shell": "^5.0.0",
+        "qs": "^6.11.2",
+        "request": "^2.88.2",
         "sharp": "^0.31.3",
         "slugify": "^1.6.5",
         "socket.io": "^4.6.1",
