--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ CLOUDINARY_SECRET=
 
 HERE_GEOCODING_API_KEY =
 HERE_GEOCODING_APP_ID =
+//test
 
 api_get_all_maps_vietnam =
 // "seed": "node src/seed/index.js",
